--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,5 +12,6 @@
 
 /* Sections style */
 @import url('./header.css');
-
+@import url('./gallery.css');
+@import url('./form.css');
 @import url('./back-link.css');
